1-2 Lista ordenada e suas variações

--- a/apresentação de dados/index.html
+++ b/apresentação de dados/index.html
@@ -8,6 +8,11 @@
     <title>Listas</title>
 </head>
 <body>
-    
+    <ol class="lista">
+        <li>Maça</li>
+        <li>Limão</li>
+        <li>Laranja</li>
+        <li>Abacaxi</li>
+    </ol>
 </body>
 </html>
