1-3 Listas não ordenadas e suas variações

--- a/apresentação de dados/index.html
+++ b/apresentação de dados/index.html
@@ -8,11 +8,11 @@
     <title>Listas</title>
 </head>
 <body>
-    <ol class="lista">
+    <ul class="lista">
         <li>Maça</li>
         <li>Limão</li>
         <li>Laranja</li>
         <li>Abacaxi</li>
-    </ol>
+    </ul>
 </body>
 </html>
