1-4 Atributos que trabalham em conjunto com as listas

--- a/apresentação de dados/index.html
+++ b/apresentação de dados/index.html
@@ -14,5 +14,13 @@
         <li>Laranja</li>
         <li>Abacaxi</li>
     </ul>
+
+    <ol>
+        <li>Frutas</li>
+        <li>Legumes</li>
+        <li value="5">Carne</li>
+        <li>Temperos</li>
+    </ol>
+
 </body>
 </html>
