1-5 Declarando lista dentro de lista

--- a/apresentação de dados/index.html
+++ b/apresentação de dados/index.html
@@ -8,17 +8,24 @@
     <title>Listas</title>
 </head>
 <body>
-    <ul class="lista">
-        <li>Maça</li>
-        <li>Limão</li>
-        <li>Laranja</li>
-        <li>Abacaxi</li>
-    </ul>
+
 
     <ol>
-        <li>Frutas</li>
+        <li>Frutas
+            <ul class="lista">
+                <li>Maça
+                    <ul>
+                        <li>Vermelha</li>
+                        <li>Verde</li>
+                    </ul>
+                </li>
+                <li>Limão</li>
+                <li>Laranja</li>
+                <li>Abacaxi</li>
+            </ul>
+        </li>
         <li>Legumes</li>
-        <li value="5">Carne</li>
+        <li>Carne</li>
         <li>Temperos</li>
     </ol>
 
