--- a/apresentação de dados/index.html
+++ b/apresentação de dados/index.html
@@ -8,25 +8,11 @@
     <title>Listas</title>
 </head>
 <body>
-
-
     <ol>
-        <li>Frutas
-            <ul class="lista">
-                <li>Maça
-                    <ul>
-                        <li>Vermelha</li>
-                        <li>Verde</li>
-                    </ul>
-                </li>
-                <li>Limão</li>
-                <li>Laranja</li>
-                <li>Abacaxi</li>
-            </ul>
-        </li>
-        <li>Legumes</li>
-        <li>Carne</li>
-        <li>Temperos</li>
+        <li>Home</li>
+        <li>Produtos</li>
+        <li>Contato</li>
+        <li>Sobre</li>
     </ol>
 
 </body>
