2-2 Semantica da tabela

--- a/apresentação de dados/tabelas/index.html
+++ b/apresentação de dados/tabelas/index.html
@@ -9,24 +9,40 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Nome</th>
-            <th>Idade</th>
-        </tr>
-        <tr>
-            <td>Maria</td>
-            <td>20</td>
-        </tr>
-        <tr>
-            <td>João</td>
-            <td>15</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Maria</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>15</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>total</td>
+                <td>35</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
+
+
+
 
 <!-- 
     tr = table row - linha da tabela
     td = table data cell - dados da celula da tabela
     th = table head - cabeçalho da tabela
+    thead = table head - cabeçalho da tabela
+    tbody = table body - corpo da tabela
+    tfoot = table foot - rodapé da tabela
  -->
