2-4 Tabela na horizontal

--- a/apresentação de dados/tabelas/index.html
+++ b/apresentação de dados/tabelas/index.html
@@ -9,28 +9,18 @@
 </head>
 <body>
     <table>
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Idade</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Maria</td>
-                <td>20</td>
-            </tr>
-            <tr>
-                <td>João</td>
-                <td>15</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>total</td>
-                <td>35</td>
-            </tr>
-        </tfoot>
+        <tr>
+            <th>Nome</th>
+            <td>Maria</td>
+            <td>João</td>
+            <td>Pedro</td>
+        </tr>
+        <tr>
+            <th>Idade</th>
+            <td>20</td>
+            <td>15</td>
+            <td>30</td>
+        </tr>
     </table>
 </body>
 </html>
