--- a/apresentação de dados/tabelas/index.html
+++ b/apresentação de dados/tabelas/index.html
@@ -9,18 +9,40 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Nome</th>
-            <td>Maria</td>
-            <td>João</td>
-            <td>Pedro</td>
-        </tr>
-        <tr>
-            <th>Idade</th>
-            <td>20</td>
-            <td>15</td>
-            <td>30</td>
-        </tr>
+        <thead>
+            <tr>
+                <th colspan="7">Junho</th>
+            </tr>
+            <tr>
+                <th>Segunda</th>
+                <th>Terça</th>
+                <th>Quarta</th>
+                <th>Quinta</th>
+                <th>Sexta</th>
+                <th>Sábado</th>
+                <th>Domingo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
