--- a/apresentação de dados/tabelas/index.html
+++ b/apresentação de dados/tabelas/index.html
@@ -44,6 +44,23 @@
             </tr>
         </tbody>
     </table>
+
+    <table>
+        <tr>
+            <th>Escola</th>
+            <td>TreinaWeb</td>
+            <td>AvMakers</td>
+        </tr>
+        <tr>
+            <th rowspan="2">Telefone</th>
+            <td>99999-9999</td>
+            <td>99999-9999</td>
+        </tr>
+        <tr>
+            <td>99999-9999</td>
+            <td>99999-9999</td>
+        </tr>
+    </table>
 </body>
 </html>
 
