3-3 Trabalhando com colgroup

--- a/apresentação de dados/tabelas/index.html
+++ b/apresentação de dados/tabelas/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <table>
+
         <thead>
             <tr>
                 <th colspan="7">Junho</th>
@@ -61,6 +62,54 @@
             <td>99999-9999</td>
         </tr>
     </table>
+
+    <table>
+        <colgroup>
+            <col span="1">
+            <col span="3" style="background-color: rgb(100, 100, 208);">
+        </colgroup>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Telefone</th>
+                <th>Endereço</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>João</td>
+                <td>20</td>
+                <td>99999-9999</td>
+                <td>R 17</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>20</td>
+                <td>99999-9999</td>
+                <td>R 17</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>20</td>
+                <td>99999-9999</td>
+                <td>R 17</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>20</td>
+                <td>99999-9999</td>
+                <td>R 17</td>
+            </tr>
+            <tr>
+                <td>João</td>
+                <td>20</td>
+                <td>99999-9999</td>
+                <td>R 17</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
 
